unpackaged/main/default/objects/dataxess_ftree__OnBoardSettings__c/fields/dataxess_ftree__CacheNamespace__c.field-meta.xml
<CustomField>
    <fullName>dataxess_ftree__CacheNamespace__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Platform cache namespace and partition</label>
    <length>250</length>
    <type>Text</type>
</CustomField>