unpackaged/main/default/objects/dataxess_ftree__OnBoardSettings__c/fields/dataxess_ftree__DunsFieldName__c.field-meta.xml
<CustomField>
    <fullName>dataxess_ftree__DunsFieldName__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Duns field name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>