unpackaged/main/default/objects/dataxess_ftree__OnBoardSettings__c/fields/dataxess_ftree__GlobalFamTreeImmediate__c.field-meta.xml
<CustomField>
    <fullName>dataxess_ftree__GlobalFamTreeImmediate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Specify GFT immediate loading</label>
    <type>Checkbox</type>
</CustomField>