unpackaged/main/default/objects/dataxess_ftree__OnBoardSettings__c/fields/dataxess_ftree__NonExistingRecordsClickable__c.field-meta.xml
<CustomField>
    <fullName>dataxess_ftree__NonExistingRecordsClickable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redirect to Onboardscreen</label>
    <type>Checkbox</type>
</CustomField>