unpackaged/main/default/objects/dataxess_ftree__OnBoardSettings__c/fields/dataxess_ftree__Password__c.field-meta.xml
<CustomField>
    <fullName>dataxess_ftree__Password__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>