unpackaged/main/default/objects/dataxess_ftree__OnBoardSettings__c/fields/dataxess_ftree__SearchMappingCountryIsoCodeField__c.field-meta.xml
<CustomField>
    <fullName>dataxess_ftree__SearchMappingCountryIsoCodeField__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Search country iso code field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>