unpackaged/main/default/objects/dataxess_ftree__OnBoardSettings__c/fields/dataxess_ftree__SearchMappingCountryNameField__c.field-meta.xml
<CustomField>
    <fullName>dataxess_ftree__SearchMappingCountryNameField__c</fullName>
    <defaultValue>&quot;companyCountry&quot;</defaultValue>
    <label>Search country name field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>