unpackaged/main/default/objects/dataxess_ftree__OnBoardSettings__c/fields/dataxess_ftree__SearchMappingDunsField__c.field-meta.xml
<CustomField>
    <fullName>dataxess_ftree__SearchMappingDunsField__c</fullName>
    <defaultValue>&quot;companyDuns&quot;</defaultValue>
    <label>Search duns field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>