unpackaged/main/default/objects/dataxess_ftree__OnBoardSettings__c/fields/dataxess_ftree__SearchPageUrl__c.field-meta.xml
<CustomField>
    <fullName>dataxess_ftree__SearchPageUrl__c</fullName>
    <defaultValue>&quot;/apex/OlbicoCdpNewAccount?doInitialSearch=true&quot;</defaultValue>
    <label>Search page URL</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>