unpackaged/main/default/objects/dataxess_ftree__OnBoardSettings__c/fields/dataxess_ftree__SearchPageUrlLightning__c.field-meta.xml
<CustomField>
    <fullName>dataxess_ftree__SearchPageUrlLightning__c</fullName>
    <defaultValue>&quot;/one/one.app#/alohaRedirect/apex/OlbicoCdpNewAccount?doInitialSearch=true&quot;</defaultValue>
    <label>Search page URL for Lightning</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>