unpackaged/main/default/objects/dataxess_ftree__OnBoardSettings__c/fields/dataxess_ftree__Username__c.field-meta.xml
<CustomField>
    <fullName>dataxess_ftree__Username__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>