unpackaged/main/default/objects/dataxess_ftree__OnBoardSettings__c/fields/dataxess_ftree__Version__c.field-meta.xml
<CustomField>
    <fullName>dataxess_ftree__Version__c</fullName>
    <defaultValue>&quot;v1&quot;</defaultValue>
    <label>Version</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>